# quant-system-server

./: .gitignore  README.md  ma_scan_results.csv  ma_scan_results_head_5.csv  pyproject.toml  quick_test.bat  run_tests.bat
docs/: README.md  quickstart.md  user_guide.md
src/quant_system/: main.py  sentiment_demo.py  test_advanced_features.py  test_first_step.py  test_improvements.py
src/quant_system/analysis/: multi_visualization.py  performance.py  visualization.py
src/quant_system/backtest/: cost_model.py  engine.py  multi_backtest.py  result.py  risk_control.py  signal.py  simple_backtest.py  slippage.py  trade.py
src/quant_system/cli/: sentiment.py
src/quant_system/data/: AAPL.csv  MSFT.csv  live_feed.py  price_feed.py  sample_prices.csv
src/quant_system/enums/: signal.py
src/quant_system/examples/: paper_trading_demo.py
src/quant_system/metrics/: performance.py
src/quant_system/report/: equity_plot.py  export.py  result_table.py
src/quant_system/result/: backtest_result.py
src/quant_system/runner/: factor_backtest.py  param_scan.py  walk_forward.py
src/quant_system/sentiment/: base.py  base_model.py  market_sentiment.py  ranking.py  registry.py  sentiment.py  stock_sentiment.py
src/quant_system/strategy/: base.py  base_strategy.py  buy_and_hold.py  dual_ma.py  signal.py  simple_ma.py
src/quant_system/trading/: account.py  order.py  paper_trading_engine.py  simulator.py
src/quant_system/visualization/: backtest_report.py  param_heatmap.py  plotting.py
tests/: conftest.py  test_backtest_engine.py  test_backtest_result.py  test_cost_model.py  test_data_feed.py  test_dual_ma_strategy.py  test_param_heatmap.py  test_performance_metrics.py  test_risk_control.py  test_simple_paper_trading.py  test_slippage.py  test_walk_forward.py
(+16 files in other folders)
