[project]
name = "quant-system"
version = "0.1.0"
description = ""
authors = [{ name = "xtyuerx", email = "xiangtaiyua06299@biaoguoworks.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["matplotlib (>=3.10.8,<4.0.0)"]

[tool.poetry]
packages = [{ include = "quant_system", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
quant = "quant_system.main:main"
